--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:write": "prettier --write .",
-    "dev:webpack": "webpack --watch --progress",
-    "dev:server": "node ./dist/bundle.js",
+    "dev:webpack": "webpack --watch",
+    "dev:server": "nodemon ./dist/bundle.js",
     "dev": "run-p dev:*"
   },
   "repository": {
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "@webpack-cli/serve": "^1.7.0",
+    "nodemon": "^2.0.18",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
