--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/user1910524aaaa/express.gracestack#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@webpack-cli/serve": "^1.7.0",
